[feat] create macro

--- a/index.html
+++ b/index.html
@@ -8,5 +8,24 @@
 </head>
 <body>
     
+    <!-- contenitore navigatore sx e main dx -->
+    <div class="container">
+
+        <!-- navigatore sx  -->
+        <nav>
+
+        </nav>
+
+        <!-- main con card canzoni -->
+        <main>
+
+        
+        </main>
+    </div>
+
+    <!-- contenitore con barra inferiore -->
+    <div class="player">
+
+    </div>
 </body>
 </html>
