[feat] add section payoff + section top list

--- a/index.html
+++ b/index.html
@@ -19,13 +19,63 @@
         <!-- main con card canzoni -->
         <main>
 
-        
+            <!-- section con effettua l'upgrade -->
+            <section class="payoff">
+                <a href="" class="none">EFFETTUA L'UPGRADE</a>
+            </section>
+            <!-- section con lista superiore main -->
+            <section>
+                <ul class="lista-superiore">
+                    <li>
+                        <a href="#" class="none">
+                            IN EVIDENZA
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="none">
+                            PODCAST
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="none">
+                            CLASSIFICHE
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="none">
+                            GENERI E MOOD
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="none">
+                            NUOVE USCITE
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="none">
+                            SCOPRI
+                        </a>
+                    </li>
+                </ul>
+            </section>
         </main>
     </div>
 
     <!-- contenitore con barra inferiore -->
     <div class="player">
+        <!-- contenuto di sx -->
+        <div>
 
+        </div>
+        <!-- contenuto centrale -->
+        <div>
+
+        </div>
+
+        <!-- contenuto di dx -->
+        <div>
+
+        </div>
     </div>
 </body>
 </html>
