--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <section class="payoff">
                 <a href="" class="none">EFFETTUA L'UPGRADE</a>
             </section>
+
             <!-- section con lista superiore main -->
             <section>
                 <ul class="lista-superiore">
@@ -58,6 +59,134 @@
                     </li>
                 </ul>
             </section>
+
+            <!-- SECTION PRIMA RIGA CARD -->
+            <section>
+                <h2>
+                    Recently played
+                </h2>
+                <div class="row">
+
+                    <div class="card">
+                        <img src="./img/metal_lifting.jpg" alt="img song">
+                        <div class="title-song">
+                            Heavy Metal
+                        </div>
+                        <div class="subtitle-song">
+                            subtitle
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="./img/stranger.jpeg" alt="img song">
+                        <div class="title-song">
+                            Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)
+                        </div>
+                        <div class="subtitle-song">
+                            Kyle Dixon & Michael Stein
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="./img/aquietplace.jpeg" alt="img song">
+                        <div class="title-song">
+                            Aquiet place
+                        </div>
+                        <div class="subtitle-song">
+                            subtitle
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="./img/split.jpeg" alt="img song">
+                        <div class="title-song">
+                            Split
+                        </div>
+                        <div class="subtitle-song">
+                            subtitle
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="./img/cure.jpeg" alt="img song">
+                        <div class="title-song">
+                            A cure for wellness
+                        </div>
+                        <div class="subtitle-song">
+                            subtitle
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="./img/sinister.jpeg" alt="img song">
+                        <div class="title-song">
+                            Sinister
+                        </div>
+                        <div class="subtitle-song">
+                            subtitle
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+
+            <!-- SECTION SECONDA RIGA CARD -->
+            <section>
+                <h2>
+                    Creato per John Doe
+                </h2>
+
+                <span class="suggerimenti">
+                    Pi&ugrave; ascolti, pi&ugrave; accurati saranno i suggerimenti
+                </span>
+
+                <div class="row second-row">
+
+                    <div class="card">
+                        <img src="./img/radar.jpeg" alt="img song">
+                        <div class="title-song">
+                            Release Radar
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="./img/mixdaily.jpeg" alt="img song">
+                        <div class="title-song">
+                            Daily Mix 1
+                        </div>
+                    </div>
+                    
+                </div>    
+            </section>
+
+            <!-- SECTION TERZA RIGA CARD -->
+             <section>
+                <h2>
+                    Artisti pi&ugrave; popolari
+                </h2>
+
+                <span class="suggerimenti">
+                    Pi&ugrave; ascolti, pi&ugrave; accurati saranno i suggerimenti
+                </span>
+
+                <div class="row second-row">
+
+                    <div class="card">
+                        <img src="./img/youg.jpeg" alt="img song" class="round-img">
+                        <div class="title-song">
+                            Lana del Rey
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="./img/einaudi.jpeg" alt="img song" class="round-img">
+                        <div class="title-song">
+                            Ludovico Einaudi
+                        </div>
+                    </div>
+                    
+                </div> 
+             </section>
         </main>
     </div>
 
