[fix] change margin nav

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <div>
                     <i class="fa-solid fa-square-plus"></i>
-                    <span class="grey-text">Crea Playlist</span>
+                    <span class="grey-text add-playlist">Crea Playlist</span>
                 </div>
 
                 <div>
