[feat] add media

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="header-nav">
                 <!-- logo-spotify -->
                 <img src="./img/logo.svg" alt="logo spotify" id="logo-spotify">
+                <img src="./img/logo-small.svg" alt="" class="logo-xs">
 
                 <!-- HOME -->
                 <div>
@@ -48,7 +49,7 @@
             <!-- parte centrale con playlist -->
             <div class="playlist">
 
-                <h4>
+                <h4 id="playlist">
                     PLAYLIST
                 </h4>
 
@@ -283,7 +284,7 @@
         <!-- contenuto di sx -->
         <div class="content-sx">
             <img src="./img/sinister.jpeg" alt="">
-            <div>
+            <div class="testo-in-ascolto">
                 <h5>
                     Sinister
                 </h5>
@@ -291,8 +292,11 @@
                     Brano Nome
                 </span>
             </div>
-            <i class="fa-regular fa-heart grey-text"></i>
-            <i class="fa-regular fa-folder grey-text"></i>
+            <div class="icon-heart-folder">
+                <i class="fa-regular fa-heart grey-text"></i>
+                <i class="fa-regular fa-folder grey-text"></i>
+            </div>
+            
         </div>
         <!-- contenuto centrale -->
         <div class="content-center">
