[feat] add pseudo class acrive

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="./img/logo-small.svg" alt="" class="logo-xs">
 
                 <!-- HOME -->
-                <div>
+                <div class="active-left">
                     <img src="./img/home.svg" alt="" class="icona-nav">
                     <span class="text-header">
                         <a href="" class="grey-text hover-white">
@@ -141,7 +141,7 @@
             <section>
                 <ul class="lista-superiore">
                     <li>
-                        <a href="#" class="grey-text hover-white">
+                        <a href="#" class="grey-text hover-white active-bottom">
                             IN EVIDENZA
                         </a>
                     </li>
