[fix] change comment

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 </span>
             </div>
         </div>
-
+        
         <!-- contenuto di dx -->
         <div class="content-dx">
             <i class="fa-solid fa-list"></i>
@@ -423,9 +423,11 @@
 
             <div class="barra-caricamento volume">
                 <div class="barra-ascolto volume">     
-                    <div class="point"></div>
+                    <div class="point">
+                    </div>
                 </div>
             </div>
+            
         </div>
     </div>
 </body>
